# BLEBeaconLocalizer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile
.devcontainer/: Dockerfile  Dockerfile.bak  devcontainer.json  devcontainer.json.bak
anchor/: .clangd  sdkconfig
anchor-libs/shared-types/: CMakeLists.txt  message_types.c  message_types.h
anchor-node/: CMakeLists.txt
anchor-node/config/: nvs_config.csv
anchor-node/main/: CMakeLists.txt  anchor_main.c
anchor-server/: CMakeLists.txt
anchor-server/src/: anchor_server.cpp  anchor_server.hpp  main.cpp  web_socket.cpp  web_socket.hpp  ws_protocol.hpp
anchor/config/: nvs_config.csv  nvs_flash.sh
anchor/main/: CMakeLists.txt  anchor_main.c
frontend/: dummy_data.py  index.html  run.sh
frontend/src/css/: style.css
frontend/src/js/: chart_controller.js  index.js  messaging.js  utils.js
libs/shared_types/: CMakeLists.txt  message_types.h
server/: CMakeLists.txt
server/src/: anchor_server.cpp  anchor_server.hpp  main.cpp  web_socket.cpp
submodules/: CMakeLists.txt
toolchains/: arm64.cmake
